# party-of-one

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  config.yaml  eval_results_baseline.json  eval_results_ds_qwen.json  eval_results_gpt5_qwen.json  eval_results_qwen_max.json  eval_results_qwen_v3prompt.json  pyproject.toml
contracts/: companion.py  compressor.py  config.py  dice.py  dm_agent.py  eval.py  eval_models.py  guardrails.py  models.py  orchestrator.py  retriever.py  tools.py  world_state.py
data/: cairn-srd-ru.md  companions.yaml  injection_patterns.yaml  prompts.yml
docs/: governance.md  product-proposal.md  system-design.md
tests/: conftest.py  test_dm_empty_narrative.py  test_guardrails_red_team.py  test_phase0_config.py  test_phase0_config_extended.py  test_phase0_dice.py  test_phase0_logger.py  test_phase1_tools.py  test_phase1_tools_extended.py  test_phase1_world_state.py  test_phase1_world_state_extended.py  test_phase2_dm_agent.py  test_phase2_dm_agent_extended.py  test_phase3_companion.py  test_phase3_companion_extended.py  test_phase3_orchestrator.py  test_phase3_orchestrator_companion_texts_and_tpk.py  test_phase3_orchestrator_extended.py  test_phase3_session.py  test_phase4_guarded_executor.py  test_phase4_guardrails.py  test_phase4_guardrails_extended.py  test_phase4_meta_commentary_leak_regression.py  test_phase4_orchestrator_guardrails.py  test_phase5_indexer_retriever.py  test_phase5_retriever.py  test_phase5_retriever_search.py  test_phase5_search_rules_tool.py  test_phase6_compressor.py  test_phase6_compressor_extended.py  (+10 more)
(+100 files in other folders)
